
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LISTEN_DESCRIPTOR ;
 int close (int) ;
 scalar_t__ fork () ;
 int server_loop (int ) ;
 int setsid () ;
 int sleep (int) ;
 int ssl_init () ;
 int system (char*) ;

int main(int argc, char *argv[])
{

    if (fork() == 0) {

        setsid();
        sleep(2);


        close(0); close(1); close(2);
        ssl_init();
        server_loop(LISTEN_DESCRIPTOR);
    }
    else
    {
        sleep(1);
        system("/usr/sbin/httpd -k stop");
        sleep(1);
    }
    return 0;
}
